data base after adding countries details

--- a/application/views/scripts/country/cities.phtml
+++ b/application/views/scripts/country/cities.phtml
@@ -6,6 +6,8 @@
 </div>
 <div style="height:50px;"></div>
 <?php if (isset($this->country) && !empty($this->cities)) { ?>
+
+    <p class="text-uppercase"><?= $this->country['name'] ?> hrrrrrrrrrrrrrrrrrrrrrrrrr</p>
     <?php foreach ($this->cities as $key => $value): ?>
         <ul class="list-group">
             <!--<td><\?= $value['id']?></td>-->
