data base after adding countries details

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -56,7 +56,11 @@
                     <?php
                     if (!empty($sessionRead)) {
                         if ($sessionRead->type == 1) { //super user "admin"
-                            header("Location: /user/admin");
+                            //header("Location: /user/admin");
+                            ?>
+                            <li><a href="<?php echo $this->baseUrl() ?>/user/admin">Admin Panel</a></li>
+                            <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-out"></span> Logout </a> </li
+                        <?php
                         } else { //normal user
                             $name = $sessionRead->username;
                             $uid = $sessionRead->id;
@@ -64,8 +68,7 @@
                             ?>
                             <li><a href="<?php echo $this->baseUrl() ?>/user/update"><span class="glyphicon glyphicon-user"></span> Update Profile </a>
                             </li> 
-                            <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-out"></span> Logout </a>
-                            </li> 
+                            <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-out"></span> Logout </a> </li> 
                             <?php
                         }
                     } elseif (isset($fbsession->first_name) && !empty(isset($fbsession->first_name))) {
