--- a/application/views/scripts/city/list.phtml
+++ b/application/views/scripts/city/list.phtml
@@ -7,9 +7,13 @@
 <div class="container">
 
 <div class="page-header" align="center">
+<div style="margin-top: 80px;"></div>
+
 	<h2>All Cities </h2>
 	<div class="pull-left">
 	<a class='btn btn-success btn-lg' href='/city/add'>Add</a>
+	<a class='btn btn-info btn-lg' href='/user/admin'>Back</a>
+
 	</div>
 </div>
 <div style="margin-top: 80px;"></div>
@@ -29,7 +33,7 @@
 		foreach ($this->cities as $key => $value) {
 			echo "<tr>";
 			//var_dump($value['image']);exit;
-			echo "<td><img src='".$value['image']."' height='100' width='100'></td>";
+			echo "<td><img src='" . $value['image'] . "' height='100' width='100'></td>";
 			echo "<td>".$value['id']."</td>";
 			echo "<td>".$value['name']."</td>";
 			echo "<td>".$value['rate']."</td>";
