--- a/application/views/scripts/user/login.phtml
+++ b/application/views/scripts/user/login.phtml
@@ -3,14 +3,14 @@
 <head>
 	<title>Login</title>
 </head>
-<body style="background: url('/var/www/html/zend_project/public/uploads/map.jpg') fixed ;">
+<body>
 <div class="container">
 <div class = "page-header" align="center">
    
    <h1 class="text-center">Login Form</h1>
    
 </div>
-<img src="/var/www/html/zend_project/public/uploads/map.jpg">
+
 	<?php
 		
 		echo "<h3 class='text-danger'>".$this->error_message."</h3>";
