--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -59,7 +59,7 @@
                             //header("Location: /user/admin");
                             ?>
                             <li><a href="<?php echo $this->baseUrl() ?>/user/admin">Admin Panel</a></li>
-                            <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-out"></span> Logout </a> </li
+                            <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-out"></span> Logout </a> </li>
                         <?php
                         } else { //normal user
                             $name = $sessionRead->username;
@@ -71,12 +71,11 @@
                             <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-out"></span> Logout </a> </li> 
                             <?php
                         }
-                    } elseif (isset($fbsession->first_name) && !empty(isset($fbsession->first_name))) {
-                        $name = $fbsession->first_name;
+                    } elseif (isset($fbsession->username) && !empty(isset($fbsession->username))) {
+                        $name = $fbsession->username;
                         echo '<li><a href="#"> Welcome' . " " . $name . '</a>' . '</li>';
                         ?>
-                        <li><a href="<?php echo $this->baseUrl() ?>/user/update"><span class="glyphicon glyphicon-user"></span> Update Profile </a>
-                        </li>       
+                              
                         <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-in"></span> Logout </a>
                         </li> 
                     <?php } else {
