--- a/application/views/scripts/user/login.phtml
+++ b/application/views/scripts/user/login.phtml
@@ -1,26 +1,74 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Login</title>
-</head>
-<body>
-<div class="container">
-<div class = "page-header" align="center">
-   
-   <h1 class="text-center">Login Form</h1>
-   
+    <head>
+        <title>Login</title>
+        <link type="text/css" rel="stylesheet" href="/bootstrap/css/login.css">
+    </head>
+    <body>
+
+        <div id="bg"></div>
+        <div class="col-lg-offset-2 col-xs-offset-0  col-lg-8 col-xs-12">
+ <div class="form-head">
+     
+                <form action="<?= $this->login_form->getAction() ?>" method="<?= $this->login_form->getMethod() ?>">
+                  
+                <h1 class="text-center">Login Form</h1>
+            <?php    echo "<h3 class='text-danger '>" . $this->error_message . "</h3>";?>
+                 <?= $this->login_form->email ?>
+                <?= $this->login_form->password ?>
+                <div class="row">
+                <?= $this->login_form->Submit ?>
+                <div class="col-xs-12 col-md-5">
+                    <?php echo '<a style= "top:0;" class="btn btn-primary form-cotrol google" href="' . $this->google . '"> Login with Facebook </a><br><br>'; ?>
+                </div>
+            
+                <div class="col-md-offset-1 col-xs-12 col-md-5">
+                    <?php echo '<a style= "top:0;" class="btn btn-primary form-cotrol facebook" href="' . $this->facebook_url . '"> Login with Facebook </a><br><br>'; ?>
+                </div>
+                <div class=" col-xs-12 col-md-5">
+                    <?php echo '<a  style= "top:0;" class="btn btn-info form-cotrol twitter" href="' . $this->twitter . '"> Login with twitter </a>';
+                    ?>
+                </div>
+            </div>
 </div>
 
-	<?php
-		
-		echo "<h3 class='text-danger'>".$this->error_message."</h3>";
-		echo $this->login_form;
-		echo '<a class="btn btn-primary" href="' . $this->facebook_url . '"> Login with Facebook </a><br><br>';
-        echo '<a class="btn btn-info" href="' . $this->twitter . '"> Login with twitter </a>';
-	?>
 
-	
+        </div>
 
-</div>
+        </div>
+    </body>
+</html>
+
+
+
+<script src='/bootstrap/js/jquery.min.js'></script>
+
+<script src="/bootstrap/js/bootstrap-datepicker.js"></script>
+<script>
+    $('#date_field1').datepicker();
+    $('#date_field2').datepicker();
+</script> 
+<link rel="stylesheet" href="/bootstrap/css/hotel.css">
+<script src="/bootstrap/js/prefixfree.min.js"></script>
+<style>
+    #bg {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: url(/uploads/green-04.jpg) no-repeat center center fixed;
+        background-size: cover;
+        -webkit-filter: blur(5px);    
+    }
+    form{
+        background-color: rgba(255,255,255,0.5);
+    }
+
+
+
+</style>
+
+
 </body>
 </html>
