--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -76,7 +76,7 @@
                         echo '<li><a href="#"> Welcome' . " " . $name . '</a>' . '</li>';
                         ?>
                               
-                        <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-in"></span> Logout </a>
+                        <li><a href="<?php echo $this->baseUrl() ?>/user/fplogout"><span class="glyphicon glyphicon-log-in"></span> Logout </a>
                         </li> 
                     <?php } else {
                         ?>
