--- a/application/views/scripts/user/login.phtml
+++ b/application/views/scripts/user/login.phtml
@@ -19,7 +19,7 @@
                 <div class="row">
                 <?= $this->login_form->Submit ?>
                 <div class="col-xs-12 col-md-5">
-                    <?php echo '<a style= "top:0;" class="btn btn-primary form-cotrol google" href="' . $this->google . '"> Login with Facebook </a><br><br>'; ?>
+                    <?php echo '<a style= "top:0;" class="btn btn-primary form-cotrol google" href="' . $this->google . '"> Login with Google+ </a><br><br>'; ?>
                 </div>
             
                 <div class="col-md-offset-1 col-xs-12 col-md-5">
