--- a/application/views/scripts/city/disqus.phtml
+++ b/application/views/scripts/city/disqus.phtml
@@ -1,9 +1,6 @@
 <?php
-define('DISQUS_SECRET_KEY', '5WdfZHwqr3QooDL0bGwVo0KWibnYQ9OmrUGkYOuzhvt8ar5VZ4o78tBekzPjCelP
-
-');
-define('DISQUS_PUBLIC_KEY', 'c7to4m5c9a740ji9fTbYarZPuBf3c3s2wbaNOSNhdwcNnDc6NEqNh9X3oX2reAui
-');
+define('DISQUS_SECRET_KEY', 'zjhrrNr8Dc7CP6uy8c7D7V4ARyW2Gjoi5Pz6Fu887xiqjn14YvG7rIYHLahjDevl');
+define('DISQUS_PUBLIC_KEY', 'XjFMiYJj5GbojsMhu0LRanNxl8lqBpzfKpySCKabHnZ9KD7jfuyD9KyrZM7gYDyu');
 
 $data = array(
 "id" => $user->id,
