--- a/application/views/scripts/city/hotelreserve.phtml
+++ b/application/views/scripts/city/hotelreserve.phtml
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html >
     <head>
+        <script>$('#map').hide();</script>
         <meta charset="UTF-8">
         <title>Hotel form</title>
         <!--<link rel="stylesheet" href="/bootstrap/css/reset.css">-->
