--- a/application/views/scripts/user/update.phtml
+++ b/application/views/scripts/user/update.phtml
@@ -5,6 +5,7 @@
         <script src="/bootstrap/js/prefixfree.min.js"></script>
         <!-- Custom CSS -->
         <link href="/bootstrap/css/simple-sidebar.css" rel="stylesheet">
+        <script>$('#map').hide();</script>
     </head>
     <body>
     <div class="container">
