--- a/application/views/scripts/city/addpost.phtml
+++ b/application/views/scripts/city/addpost.phtml
@@ -1,11 +1,15 @@
 <head>
 	<title>Add Post</title>
+        <script>$('#map').hide();</script>
 </head>
 
 <body>
 
 <div class="container">
 <div style="margin-top: 50px;"></div>
+<div class="page-header" align="center">
+    <h1 style="color: green;">Add Your Experience</h1>
+</div>
 <div>
 
 <?php
