--- a/application/views/scripts/user/login.phtml
+++ b/application/views/scripts/user/login.phtml
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script>$('#map').hide();</script>
         <title>Login</title>
         <link type="text/css" rel="stylesheet" href="/bootstrap/css/login.css">
     </head>
@@ -63,6 +64,9 @@
     }
     form{
         background-color: rgba(255,255,255,0.5);
+    }
+    .forms input{
+        background-color: #777777;
     }
 
 
